fix(LandingPage): fix features section misalignement

--- a/src/components/LandingPage/LandingPage2.css
+++ b/src/components/LandingPage/LandingPage2.css
@@ -4,12 +4,21 @@ html:has(.landing-page) {
     overflow-x: hidden;
 }
 
-.landing-page #hero-banner {
+#hero-banner {
+    width: 100%;
+    padding-top: 250px;
+}
+
+#hero-banner::before {
+    /* that could be done with the hero-banner background, but it's necessary to keep the height of hero-banner flexible in order to keep a coherent stacking of elements, that's why we use ::before here */
+    content: "";
+    z-index: -1;
     width: 100%;
     height: calc(min(100vh, 1100px) + 2px);
+    position: absolute;
+    top: 0;
     border-bottom: 2px solid rgba(var(--text-color-alt), .5);
     background: radial-gradient(circle at bottom left, rgba(var(--text-color-alt), .3) 0, rgba(var(--text-color-alt), .1) 50%, transparent 100%);
-    padding-top: 250px;
 }
 
 .landing-page .affiliation-disclaimer {
